versioned_docs/version-1.16.1/exercise-2-api-knowledge-ingestion.mdx
---
sidebar_position: 5
---

import ChangeTag from '@site/src/components/ChangeTag';

# ⚙️ Exercise 2.1: Ingest Knowledge Using the API

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '12px', padding: '2em', marginBottom: '2em' }}>
  <h2 style={{ margin: '0 0 1em 0', color: '#0c4a6e', fontSize: '1.5em' }}>🎯 Exercise Overview</h2>
  <p style={{ fontSize: '1.1em', marginBottom: '1em', lineHeight: '1.6' }}>
    Go beyond manual upload! In this exercise, you'll use a <b>ready-to-use API</b> to automatically ingest Jira issues into your Dify knowledge base. This approach gives you <i>structured documents with rich metadata</i>—much more powerful than plain text files.
  </p>
  <div style={{ background: '#f3f0ff', border: '2px solid #7c3aed', borderRadius: '8px', padding: '1em', marginTop: '1em' }}>
    <p style={{ margin: '0', fontSize: '1em', fontWeight: '600', color: '#7c3aed' }}>
      ✨ <b>This is the foundation for automated knowledge ingestion. Perfect for teams that want to integrate Jira data into their AI assistants!</b>
    </p>
  </div>
</div>

<div style={{ display: 'grid', gridTemplateColumns: '2fr 1fr', gap: '2em', alignItems: 'center', marginBottom: '2em' }}>
  <div>
    <h3 style={{ color: '#0c4a6e', marginBottom: '1em' }}>🚀 What You'll Build</h3>
    <ul style={{ fontSize: '1em', lineHeight: '1.6' }}>
      <li><b>Connect</b> to the deployed Jira ingestion API</li>
      <li><b>Explore</b> available Jira projects using Swagger UI</li>
      <li><b>Ingest</b> structured Jira issues into your Dify knowledge base</li>
      <li><b>Compare</b> manual vs. API-based ingestion results</li>
    </ul>
  </div>
  <div style={{ textAlign: 'center' }}>
    <img src={require('../static/img/ex2/knowledge-base.png').default} alt="Knowledge Base" style={{ maxWidth: '100%', borderRadius: '8px' }} />
  </div>
</div>

<div style={{ background: '#ecfdf5', border: '2px solid #22c55e', borderRadius: '8px', padding: '1em 1.5em', marginBottom: '2em' }}>
  <b>Release baseline:</b> Follow this API ingestion exercise against the Dify <code>1.16.1</code> workshop default. Use the Dify base URL shown in your assigned environment; the examples below intentionally use a synthetic placeholder.
</div>

---

## 📋 Step-by-Step Checklist <ChangeTag kind="changed" />

<div style={{ background: '#f3f0ff', border: '2px solid #7c3aed', borderRadius: '12px', padding: '1.5em', marginBottom: '2em' }}>
  <h3 style={{ margin: '0 0 1em 0', color: '#7c3aed', fontSize: '1.2em' }}>🎯 Exercise Checklist</h3>
  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '1em', fontSize: '1em' }}>
    <div>
      <ul style={{ listStyle: 'none', padding: 0, margin: 0 }}>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 1:</b> Get Dify API credentials</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 2:</b> Explore available projects</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 3:</b> Ingest Jira issues via API</label></li>
      </ul>
    </div>
    <div>
      <ul style={{ listStyle: 'none', padding: 0, margin: 0 }}>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 4:</b> Verify ingestion in Dify</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 5:</b> Add Summary Index</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 6:</b> Benchmark retrieval</label></li>
        <li style={{ marginBottom: '0.5em' }}><label style={{ display: 'flex', alignItems: 'center', cursor: 'pointer' }}><input type="checkbox" style={{ marginRight: '0.5em' }} /> <b>Step 7:</b> Compare knowledge bases</label></li>
      </ul>
    </div>
  </div>
  <div style={{ background: '#e0f2fe', border: '1px solid #38bdf8', borderRadius: '6px', padding: '0.8em', marginTop: '1em', fontSize: '0.9em' }}>
    <b>⏱️ Estimated Time:</b> 20-25 minutes | <b>🎯 Goal:</b> API-ingested knowledge base with structured metadata and measured retrieval
  </div>
</div>

---

## 🚀 Why Use the API?

<div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '2em', alignItems: 'center', marginBottom: '2em' }}>
  <div>
    <p>Manually uploading <code>.txt</code> files gives you a starting point, but <b>API ingestion</b> offers superpowers:</p>
    <ul style={{ fontSize: '1em', lineHeight: '1.6' }}>
      <li>🧠 <b>Rich documents</b> with metadata (issue keys, project info, etc.)</li>
      <li>🤖 <b>Bulk upload</b> multiple issues at once</li>
      <li>✅ <b>Structured data</b> - each document linked to an <code>issue_key</code></li>
      <li>🧰 <b>Automation ready</b> - perfect for pipelines or daily ingestion</li>
    </ul>
    <div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em', marginTop: '1em' }}>
      <b>💡 Use this API if you want to:</b>
      <ul style={{ margin: '0.5em 0 0 0', paddingLeft: '1.5em' }}>
        <li>Experiment with JSON ingestion instead of raw <code>.txt</code></li>
        <li>See how metadata improves search quality</li>
        <li>Reuse this approach at work with real Jira projects</li>
      </ul>
    </div>
  </div>
  <div style={{ textAlign: 'center' }}>
    <img src={require('../static/img/ex2/dataset-api-config.png').default} alt="API Config Screenshot" style={{ maxWidth: '100%', borderRadius: '8px', boxShadow: '0 2px 8px #ddd' }} />
    <div style={{ fontSize: '0.95em', color: '#444', marginTop: '0.5em' }}>
      <b>API Ingestion Example</b>
    </div>
  </div>
</div>

---

## 🛠️ Step 1: Get Your Dify Configuration

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>📋 Configuration Steps</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>You'll need your Dify instance details to connect the API. Follow these steps:</p>
</div>

### 1.1: Access Your Dify API Settings

<ol>
  <li>
    In your Dify instance, navigate to <b>Knowledge</b> section
  </li>
  <li>
    Find and copy your <b>API Server</b> URL
  </li>
  <li>
    Click the <b>API Key</b> button and create a dedicated, short-lived key for this ingestion
  </li>
</ol>

<div style={{ background: '#fef2f2', border: '2px solid #ef4444', borderRadius: '8px', padding: '1em 1.2em', margin: '1em 0' }}>
  <b>Credential safety:</b> Use this key only for the workshop ingestion, never include it in screenshots or saved command files, and revoke it after the verification steps below.
</div>

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/dify/1.16.1/ex2/kb-api-access.png').default} 
    alt="API Access" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Step 1: Access API settings in Knowledge section (click to expand)</i></div>
</div>

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/dify/1.16.1/ex2/kb-create-apikey.png').default} 
    alt="Create API Key" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Step 2: Create API key for datasets (click to expand)</i></div>
</div>

<div style={{ background: '#e0f2fe', border: '2px solid #38bdf8', borderRadius: '8px', padding: '1em 1.2em', margin: '1em 0' }}>
  <p style={{ margin: '0', fontSize: '1em' }}>
    🧠 <b>Pro Tip:</b> Keep your API Server URL and API key handy - you'll need them in the next steps!
  </p>
</div>

---

## 🔍 Step 2: Explore Available Projects

Before sending any Dify credentials, open the service <a href="https://dify-jira.testingfantasy.com/health" target="_blank" rel="noopener noreferrer"><code>/health</code></a> and <a href="https://dify-jira.testingfantasy.com/projects" target="_blank" rel="noopener noreferrer"><code>/projects</code></a> endpoints. Continue only when the service reports version <code>2.1.0</code> and lists <code>REST_JiraEcosystem_issues</code>.

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>📋 Exploration Steps</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>Before ingesting data, let's see what Jira projects are available using the interactive Swagger UI.</p>
</div>

### 2.1: Open the API Documentation

<div style={{ 
  background: 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)', 
  border: '2px solid #7c3aed', 
  borderRadius: '12px', 
  padding: '1.5em 2em', 
  margin: '1.5em 0',
  textAlign: 'center',
  boxShadow: '0 4px 20px rgba(124, 58, 237, 0.3)'
}}>
  <h3 style={{ margin: '0 0 0.8em 0', color: '#fff', fontSize: '1.3em', fontWeight: '700' }}>
    📚 Interactive API Documentation
  </h3>
  <p style={{ margin: '0 0 1.2em 0', color: '#f0f0f0', fontSize: '1.05em' }}>
    Explore available Jira projects and test API endpoints directly in your browser
  </p>
  <a 
    href="https://dify-jira.testingfantasy.com/docs" 
    target="_blank" 
    rel="noopener noreferrer"
    style={{
      display: 'inline-block',
      background: '#fff',
      color: '#7c3aed',
      padding: '0.8em 2em',
      borderRadius: '8px',
      textDecoration: 'none',
      fontWeight: '700',
      fontSize: '1.1em',
      boxShadow: '0 4px 12px rgba(0, 0, 0, 0.2)',
      transition: 'all 0.3s ease',
      border: '2px solid transparent'
    }}
    onMouseEnter={(e) => {
      e.currentTarget.style.transform = 'translateY(-2px)';
      e.currentTarget.style.boxShadow = '0 6px 16px rgba(0, 0, 0, 0.3)';
    }}
    onMouseLeave={(e) => {
      e.currentTarget.style.transform = 'translateY(0)';
      e.currentTarget.style.boxShadow = '0 4px 12px rgba(0, 0, 0, 0.2)';
    }}
  >
    🔗 Open Swagger UI →
  </a>
</div>

The Swagger UI provides an interactive interface where you can:
- 📖 Browse all available endpoints
- 🧪 Test API calls directly in your browser
- 👀 See request/response examples
- 🔍 View available projects interactively

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/ex2/dify-jira-api-projects.png').default} 
    alt="Swagger UI showing available projects" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer', boxShadow: '0 2px 8px #ddd' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Swagger UI interface (click to expand)</i></div>
</div>

<div style={{ background: '#f0f9ff', border: '1px solid #0ea5e9', borderRadius: '8px', padding: '1em', marginTop: '1em' }}>
  <b>💡 Tip:</b> The Swagger UI is especially helpful if you're new to APIs. You can click <b>"Try it out"</b> on any endpoint to test it without writing curl commands!
</div>

---

## 📤 Step 3: Ingest Jira Issues

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🔧 Ingestion Steps</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>Use the <b>POST /jira/ingest</b> endpoint to ingest specific projects. Leave the <code>dataset_id</code> empty and fill in your Dify configuration.</p>
</div>

### 3.1: Using Command Line (curl)

Run this command to ingest a project:

```bash
curl -X 'POST' \
  'https://dify-jira.testingfantasy.com/jira/ingest?advanced_ingestion=false' \
  -H 'accept: application/json' \
  -H 'Content-Type: application/json' \
  -d '{
  "request": {
    "project": "REST_JiraEcosystem_issues"
  },
  "dify_config": {
    "dify_base_url": "{your_dify_base_url}/v1",
    "dify_api_key": "{your_dify_api_key}",
    "dataset_id": "" 
  }
}'
```

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em', marginTop: '1em' }}>
  <b>📝 Replace these values:</b>
  <ul style={{ margin: '0.5em 0 0 0', paddingLeft: '1.5em' }}>
    <li><code>{'{'}your_dify_base_url{'}'}</code> → Your Dify instance base URL (from Step 1)</li>
    <li><code>{'{'}your_dify_api_key{'}'}</code> → Your Dify API key (from Step 1)</li>
    <li><code>REST_JiraEcosystem_issues</code> → The project you want to ingest (use <code>/projects</code> endpoint to see all available projects)</li>
  </ul>
</div>

### 3.2: Using Swagger UI (Recommended)

You can also use the Swagger UI to test the endpoint interactively:

1. Navigate to the <b>POST /jira/ingest</b> endpoint in Swagger UI
2. Click <b>"Try it out"</b>
3. Use this payload:

```json
{
  "request": {
    "project": "REST_JiraEcosystem_issues"
  },
  "dify_config": {
    "dify_base_url": "{your_dify_base_url}/v1",
    "dify_api_key": "{your_dify_api_key}",
    "dataset_id": "" 
  }
}
```

4. Click <b>"Execute"</b> to run the ingestion

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/ex2/dify-jira-api-ingest.png').default} 
    alt="Swagger UI showing ingest endpoint" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer', boxShadow: '0 2px 8px #ddd' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Swagger UI ingest endpoint (click to expand)</i></div>
</div>

---

## ✅ Step 4: Verify Ingestion in Dify <ChangeTag kind="changed" />

<div style={{ background: '#f0f9ff', border: '2px solid #0ea5e9', borderRadius: '8px', padding: '1em 1.5em', margin: '1em 0' }}>
  <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>🔍 Verification Steps</h4>
  <p style={{ margin: '0', fontSize: '0.95em' }}>After running the ingestion command, verify that your data was successfully uploaded to Dify.</p>
</div>

### 4.1: Check the API Response

The API will return a response showing the ingestion status:

```json
{
  "success": true,
  "dify_instance": "{your_dify_base_url}/v1",
  "files_processed": 1,
  "files_failed": 0,
  "results": [
    {
      "file": "REST_JiraEcosystem_issues",
      "result": ["... Dify document and metadata responses ..."],
      "issues_ingested": 23
    }
  ],
  "errors": []
}
```

The exact Dify response objects inside <code>results[0].result</code> vary by server version. Treat the request as successful only when <code>success</code> is <code>true</code>, <code>files_processed</code> is <code>1</code>, <code>files_failed</code> is <code>0</code>, and <code>errors</code> is empty.

### 4.2: Verify in Dify Knowledge Base

Navigate to your Dify instance and check the <b>Knowledge</b> section. You should see your newly created knowledge base!

Confirm that:

- the <code>Jira_API_Basic_*</code> knowledge base exists and all <b>23</b> documents finish indexing;
- built-in metadata is enabled and the custom <code>issue_key</code> field is attached to issue documents; and
- the descriptive smoke query <code>REST-266 Default Jackson configuration unknown properties</code> returns REST-266 at rank 1.

Do not accept the API response as proof that indexing finished. This API currently
creates one dataset per run and submits the documents, but it does not poll every
document to a terminal indexing state or make reruns idempotent. Verify all 23 document
states in Dify and avoid repeating the ingestion call unless you intentionally want
another dataset.

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/dify/1.16.1/ex2/api-ingested-documents.png').default} 
    alt="KB Created API" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Knowledge base created via API (click to expand)</i></div>
</div>

<div style={{ textAlign: 'center', margin: '1em 0' }}>
  <img 
    src={require('../static/img/dify/1.16.1/ex2/api-ingested-metadata.png').default} 
    alt="Dataset API Config" 
    style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer' }} 
    onClick={(e) => {
      const img = e.target;
      if (img.style.position === 'fixed') {
        img.style.position = 'static';
        img.style.top = 'auto';
        img.style.left = 'auto';
        img.style.transform = 'none';
        img.style.zIndex = 'auto';
        img.style.maxWidth = '100%';
        img.style.maxHeight = 'none';
        document.body.style.overflow = 'auto';
      } else {
        img.style.position = 'fixed';
        img.style.top = '50%';
        img.style.left = '50%';
        img.style.transform = 'translate(-50%, -50%)';
        img.style.zIndex = '9999';
        img.style.maxWidth = '90vw';
        img.style.maxHeight = '90vh';
        img.style.objectFit = 'contain';
        document.body.style.overflow = 'hidden';
      }
    }}
  />
  <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Dataset configuration (click to expand)</i></div>
</div>

<div style={{ background: '#ecfdf5', border: '2px solid #22c55e', borderRadius: '12px', padding: '1.5em', margin: '2em 0' }}>
  <div style={{ textAlign: 'center', marginBottom: '1em' }}>
    <h3 style={{ margin: '0 0 0.5em 0', color: '#166534', fontSize: '1.3em' }}>🎉 Success! Your Knowledge Base is Ready</h3>
    <p style={{ margin: '0', fontSize: '1em', color: '#166534' }}>Your Jira issues have been successfully ingested with structured metadata!</p>
  </div>
</div>

After the knowledge-base and retrieval checks pass, return to Dify's Knowledge API settings and revoke the short-lived key. Do not retain the key in workshop notes, terminal history, screenshots, or source control. The verified 1.16.1 run returned <code>success: true</code>, processed one file with no failures, created 23 issue documents, and revoked the key immediately after verification.

---

## 🧠 Step 5: Add Summary Index <ChangeTag kind="new" />

Dify 1.12 introduced <b>Summary Index</b>. It generates a compact LLM summary for each
chunk and embeds that summary as another retrieval surface. This can make requirements,
risks, and test implications easier to find when the original Jira wording differs from
the learner's question.

1. Open the API-ingested knowledge base and go to <b>Settings</b>.
2. Keep <b>High Quality</b> indexing and enable <b>Summary Auto-Gen</b>.
3. Select <code>gpt-35-turbo-16k</code>.
4. Instruct the model to preserve the Jira key, summary, status, requirements, risks,
   acceptance criteria, test implications, and constraints without inventing facts.
5. Save the settings. Summary Auto-Gen applies to newly indexed content; for the 23
   existing documents, select all documents and choose <b>Generate summary</b>.

<img src={require('../static/img/dify/1.16.1/ex2/summary-index-settings.png').default} alt="Summary Auto-Gen enabled with the workshop model and Jira-focused instructions" style={{ maxWidth: '100%', borderRadius: '8px', margin: '1em 0' }} />

Inspect at least one generated summary before trusting it. For REST-266, confirm that
the backward-compatibility constraint remains explicit. Generated test implications
are useful retrieval hints, but they are model output, not new Jira requirements.

---

## 🎛️ Step 6: Tune and Benchmark Retrieval <ChangeTag kind="changed" />

Configure <b>Hybrid Search</b> with weighted retrieval:

- semantic weight: <code>0.3</code>;
- keyword weight: <code>0.7</code>;
- Top K: <code>10</code>; and
- score threshold: <code>0.05</code>.

<img src={require('../static/img/dify/1.16.1/ex2/hybrid-retrieval-settings.png').default} alt="Hybrid Search weighted toward keywords with a 0.05 score threshold" style={{ maxWidth: '100%', borderRadius: '8px', margin: '1em 0' }} />

Run this fixed acceptance suite in <b>Retrieval Testing</b> before tuning further:

| Query | Expected evidence |
| --- | --- |
| `REST-266 Default Jackson configuration unknown properties` | REST-266 at rank 1 |
| `Which issue creates a backward-compatibility risk when unknown JSON properties are accepted?` | REST-266 at rank 1 |
| `Which Jira work has important test implications for REST API compatibility?` | REST-266 in the top 3 |
| `Why is the sky blue?` | No retrieved chunks |

<img src={require('../static/img/dify/1.16.1/ex2/retrieval-benchmark-risk.png').default} alt="Risk-oriented benchmark retrieving REST-266 at rank 1" style={{ maxWidth: '100%', borderRadius: '8px', margin: '1em 0' }} />
<img src={require('../static/img/dify/1.16.1/ex2/retrieval-benchmark-no-match.png').default} alt="Unrelated benchmark query returning no chunks after the score threshold" style={{ maxWidth: '100%', borderRadius: '8px', margin: '1em 0' }} />

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em', margin: '1em 0' }}>
  <b>Hybrid search does not replace metadata filtering.</b> Conceptual Jira questions
  benefit from summaries and semantic retrieval, while exact identifiers such as
  <code>REST-265</code> should be extracted and applied as an
  <code>issue_key</code> filter. Exercise 3 establishes the grounded baseline;
  Exercise 4 adds the extractor and exact-key retrieval paths.
</div>

---

## 📚 Step 7: Compare Knowledge Base Approaches <ChangeTag kind="changed" />

<div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '12px', padding: '1.5em 2em', margin: '2em 0', fontSize: '1.08em', boxShadow: '0 2px 8px #facc1533' }}>
  <h3 style={{ margin: '0 0 1em 0', color: '#b45309', fontSize: '1.2em' }}>🔬 Understanding the Differences</h3>
  
  <p style={{ marginBottom: '1em' }}>
    <b>In this exercise, you will work with <span style={{ color: '#b45309' }}>three knowledge bases</span> in Dify:</b>
  </p>
  
  <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr 1fr', gap: '1em', marginBottom: '1.5em' }}>
    <div style={{ background: '#f9fafb', border: '1px solid #e5e7eb', borderRadius: '8px', padding: '1em' }}>
      <h4 style={{ margin: '0 0 0.5em 0', color: '#7c3aed' }}>📄 Manual Ingestion</h4>
      <p style={{ margin: '0', fontSize: '0.9em' }}>Created by uploading <code>.txt</code> files manually. Simple but limited structure and no metadata.</p>
    </div>
    <div style={{ background: '#f9fafb', border: '1px solid #e5e7eb', borderRadius: '8px', padding: '1em' }}>
      <h4 style={{ margin: '0 0 0.5em 0', color: '#0ea5e9' }}>🔧 Basic API Ingestion</h4>
      <p style={{ margin: '0', fontSize: '0.9em' }}>API-based knowledge base with structured data. Useful for simple lookups and basic retrieval.</p>
    </div>
    <div style={{ background: '#f9fafb', border: '1px solid #e5e7eb', borderRadius: '8px', padding: '1em' }}>
      <h4 style={{ margin: '0 0 0.5em 0', color: '#22c55e' }}>🚀 Advanced API Ingestion</h4>
      <p style={{ margin: '0', fontSize: '0.9em' }}>Enhanced with query seeding and aliases. Better understanding of user intents and synonyms.</p>
    </div>
  </div>

  <div style={{ background: '#f3f0ff', border: '1px solid #7c3aed', borderRadius: '8px', padding: '1em', marginBottom: '1em' }}>
    <b>💡 Key Differences:</b>
    <ul style={{ margin: '0.5em 0 0 0', paddingLeft: '1.5em' }}>
      <li><b>Manual</b>: Raw text files, limited structure, no metadata</li>
      <li><b>Basic API</b>: Structured data with metadata (issue keys, project info)</li>
      <li><b>Advanced API</b>: Query seeding + aliases for better retrieval and understanding</li>
    </ul>
  </div>

  <div style={{ margin: '1.5em 0' }}>
    <b>🧪 Test These Queries on All Three Knowledge Bases:</b>
    <div style={{ background: '#f0f9ff', border: '1px solid #0ea5e9', borderRadius: '8px', padding: '1em', marginTop: '0.5em' }}>
      <ul style={{ margin: '0', fontSize: '1.05em', listStyle: 'none', padding: 0 }}>
        <li style={{ marginBottom: '0.5em' }}>👉 <code>What is this issue about: Jira Issue: REST-259?</code></li>
        <li style={{ marginBottom: '0.5em' }}>👉 <code>Give a test plan for REST-266</code></li>
        <li style={{ marginBottom: '0.5em' }}>👉 <code>Who is the assignee for REST-266?</code></li>
        <li style={{ marginBottom: '0.5em' }}>👉 <code>Summarize the technical documentation for the REST module.</code></li>
      </ul>
    </div>
    <p style={{ margin: '1em 0 0 0', color: '#b45309', fontWeight: 500 }}>
      Record rank, source, score, and no-match behavior rather than judging only how plausible a result looks.
    </p>
  </div>

  <div style={{ textAlign: 'center', margin: '1em 0' }}>
    <img 
      src={require('../static/img/ex2/queries-compare.png').default} 
      alt="Query Comparison" 
      style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer', boxShadow: '0 2px 8px #ddd' }} 
      onClick={(e) => {
        const img = e.target;
        if (img.style.position === 'fixed') {
          img.style.position = 'static';
          img.style.top = 'auto';
          img.style.left = 'auto';
          img.style.transform = 'none';
          img.style.zIndex = 'auto';
          img.style.maxWidth = '100%';
          img.style.maxHeight = 'none';
          document.body.style.overflow = 'auto';
        } else {
          img.style.position = 'fixed';
          img.style.top = '50%';
          img.style.left = '50%';
          img.style.transform = 'translate(-50%, -50%)';
          img.style.zIndex = '9999';
          img.style.maxWidth = '90vw';
          img.style.maxHeight = '90vh';
          img.style.objectFit = 'contain';
          document.body.style.overflow = 'hidden';
        }
      }}
    />
    <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Comparing query results (click to expand)</i></div>
  </div>

  <div style={{ textAlign: 'center', margin: '1em 0' }}>
    <img 
      src={require('../static/img/ex2/queries-compare-advanced.png').default} 
      alt="Advanced Query Comparison" 
      style={{ maxWidth: '100%', borderRadius: '8px', cursor: 'pointer', boxShadow: '0 2px 8px #ddd' }} 
      onClick={(e) => {
        const img = e.target;
        if (img.style.position === 'fixed') {
          img.style.position = 'static';
          img.style.top = 'auto';
          img.style.left = 'auto';
          img.style.transform = 'none';
          img.style.zIndex = 'auto';
          img.style.maxWidth = '100%';
          img.style.maxHeight = 'none';
          document.body.style.overflow = 'auto';
        } else {
          img.style.position = 'fixed';
          img.style.top = '50%';
          img.style.left = '50%';
          img.style.transform = 'translate(-50%, -50%)';
          img.style.zIndex = '9999';
          img.style.maxWidth = '90vw';
          img.style.maxHeight = '90vh';
          img.style.objectFit = 'contain';
          document.body.style.overflow = 'hidden';
        }
      }}
    />
    <div style={{ fontSize: '0.9em', color: '#666', marginTop: '0.5em' }}><i>Advanced query comparison (click to expand)</i></div>
  </div>

  <div style={{ background: '#e0f2fe', border: '2px solid #38bdf8', borderRadius: '8px', padding: '1em', marginTop: '1em' }}>
    <p style={{ margin: '0', fontSize: '1em' }}>
      🧠 <b>Pro Tip:</b> After uploading, go to <b>Retrieval testing</b> in Dify and try the queries above. Compare the answers you get from each knowledge base. <b>Structured data and advanced techniques enable smarter, more accurate answers!</b>
    </p>
  </div>
</div>

---

## 🔍 What Happens Behind the Scenes?

<details style={{
  border: '2px solid #7c3aed',
  borderRadius: '8px',
  background: '#faf9ff',
  padding: '1em 1.5em',
  marginTop: '1em',
  marginBottom: '1em'
}}>
<summary style={{ cursor: 'pointer', fontWeight: 'bold', fontSize: '1.1em', color: '#7c3aed' }}>🔬 Technical Details</summary>
<div style={{ marginTop: '1em' }}>
  <p>When you ingest Jira issues via the API, here's what happens:</p>
  <ul style={{ marginTop: '0.5em' }}>
    <li>Each issue is converted into a descriptive <b>document</b> with summary, description, project, type, etc.</li>
    <li>Smart chunking ensures readable chunks with overlap for better search coverage</li>
    <li>Metadata (like <code>issue_key</code>) is attached to each chunk, improving traceability</li>
    <li>Documents are vectorized and indexed in your Dify knowledge base</li>
  </ul>
</div>
</details>

---

## ⏱️ Why We Do Not Add a Trigger Yet <ChangeTag kind="new" />

Dify 1.10 added schedule and webhook triggers for <b>Workflow</b> applications. They
could eventually synchronize Jira automatically, but the deployed ingestion API
creates a new random dataset on every run, does not update by stable source identity,
and does not wait for indexing to finish. Scheduling that behavior would create silent
duplicates faster.

Adopt a trigger only after the ingestion owner adds idempotent create/update behavior,
terminal indexing checks, bounded retries, and observable partial failures. Until then,
the deliberate one-shot call in this exercise is safer and easier to audit.

---

## 🔧 Advanced: Deploy Your Own API (Optional)

<details style={{
  border: '2px solid #7c3aed',
  borderRadius: '8px',
  background: '#faf9ff',
  padding: '1em 1.5em',
  marginTop: '2em',
  marginBottom: '2em'
}}>
<summary style={{ cursor: 'pointer', fontWeight: 'bold', fontSize: '1.1em', color: '#7c3aed' }}>🚀 Deploy Your Own API Instance</summary>
<div style={{ marginTop: '1em' }}>
  <p>If you want to deploy your own version of the API or understand how it works under the hood:</p>
  <ol style={{ marginTop: '0.5em' }}>
    <li>Visit <a href="https://github.com/bassagap/dify_jira" target="_blank" rel="noopener noreferrer">https://github.com/bassagap/dify_jira</a> and create a <b>Codespace</b> on the <b>main</b> branch</li>
    <li>Follow the setup instructions to deploy your own instance</li>
    <li>This gives you full control over the API and allows customization</li>
  </ol>
  <div style={{ background: '#fffbe8', border: '1px solid #facc15', borderRadius: '6px', padding: '0.8em', marginTop: '1em', fontSize: '0.9em' }}>
    <b>Note:</b> This is optional and only needed if you want to customize the API or understand the implementation details.
  </div>
</div>
</details>

---

## 🎯 Exercise Complete! What's Next? <ChangeTag kind="changed" />

<div style={{ background: '#f3f0ff', border: '2px solid #7c3aed', borderRadius: '12px', padding: '2em', marginBottom: '2em' }}>
  <div style={{ textAlign: 'center', marginBottom: '1.5em' }}>
    <h3 style={{ margin: '0 0 0.5em 0', color: '#7c3aed', fontSize: '1.4em' }}>🎉 Congratulations!</h3>
    <p style={{ margin: '0', fontSize: '1.1em', color: '#7c3aed' }}>You've successfully ingested Jira issues using the API!</p>
  </div>
  
  <div style={{ background: '#e0f2fe', border: '2px solid #38bdf8', borderRadius: '8px', padding: '1em', marginBottom: '1.5em' }}>
    <h4 style={{ margin: '0 0 0.5em 0', color: '#0c4a6e' }}>✅ What You've Accomplished:</h4>
    <ul style={{ margin: '0', fontSize: '0.95em' }}>
      <li>✅ Connected to the Jira ingestion API</li>
      <li>✅ Explored available projects using Swagger UI</li>
      <li>✅ Ingested structured Jira issues with metadata</li>
      <li>✅ Compared different knowledge base approaches</li>
      <li>✅ Generated and reviewed Summary Index content</li>
      <li>✅ Passed a fixed positive and no-match retrieval benchmark</li>
    </ul>
  </div>

  <div style={{ background: '#fffbe8', border: '2px solid #facc15', borderRadius: '8px', padding: '1em', marginBottom: '1.5em' }}>
    <h4 style={{ margin: '0 0 0.5em 0', color: '#ca8a04' }}>🚀 Ready for the Next Challenge?</h4>
    <p style={{ margin: '0 0 1em 0', fontSize: '0.95em' }}>This deployed API is a great next step if you want to:</p>
    <ul style={{ margin: '0', fontSize: '0.95em' }}>
      <li>🤖 Automate ingestion in your organization</li>
      <li>🔗 Connect to real Jira projects</li>
      <li>🧪 Test richer search results with structured metadata</li>
      <li>📊 Compare manual vs. API-based knowledge bases</li>
    </ul>
  </div>
</div>
